# zync

./: .gitignore  Cargo.toml  DESIGN.md  Dockerfile  PLAN.md  README.md  docker-compose.yml
crates/git-core/: Cargo.toml
crates/git-core/src/: lib.rs
crates/git-core/tests/: git_core.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/src/auth/: mod.rs
crates/server/src/collaboration/: mod.rs
crates/server/src/db/: mod.rs
crates/server/src/files/: mod.rs
crates/server/src/git/: mod.rs
crates/server/src/repository/: mod.rs
crates/server/src/sync/: mod.rs
crates/server/src/websocket/: mod.rs
crates/server/src/workspace/: mod.rs
crates/ui/: Cargo.toml
crates/ui/src/: api.rs  lib.rs  main.rs  style.css
docs/: API.md
k8s/: deployment.yaml  service.yaml
