[package]
name = "zync-server"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", features = ["macros", "ws"] }
chrono.workspace = true
futures-util.workspace = true
notify.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
zync-git-core = { path = "../git-core" }

